# opg-pipeline-builder

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/linters/: .mypy.ini
.github/workflows/: nox.yml  run-tests.yml  security.yml
docs/: README.md  pipeline.md
docs/api/: database.md
docs/guide/: background.md  configuration.md
opg_pipeline_builder/: command_line.py  database.py  pipeline.py  pipeline_builder.py  transforms.py  validator.py
opg_pipeline_builder/transform_engines/: athena.py  base.py  catalog.py  data_linter.py
opg_pipeline_builder/transform_engines/transforms/: athena.py  pandas.py
opg_pipeline_builder/transform_engines/utils/: utils.py
opg_pipeline_builder/utils/: constants.py  exceptions.py  schema_reader.py  utils.py
src/: command_line.py  pipeline_builder.py  validator.py
src/opg_pipeline_builder/: command_line.py  constants.py  database.py  pipeline.py  pipeline_builder.py  transforms.py  validator.py
src/opg_pipeline_builder/models/: metadata_model.py
src/opg_pipeline_builder/models/pipeline_config/: pipeline_config.py  table_config.py
src/opg_pipeline_builder/transform_engines/: athena.py  base.py  catalog.py  data_linter.py  enrich_meta.py  pandas.py
src/opg_pipeline_builder/transform_engines/transforms/: athena.py  base.py  panda.py  pandas.py
src/opg_pipeline_builder/transform_engines/utils/: utils.py  (+1 more)
src/opg_pipeline_builder/utils/: constants.py  schema_reader.py  utils.py
src/transform_engines/: base.py  pandas.py
src/transform_engines/transforms/: base.py
src/utils/: utils.py
tests/: conftest.py  helpers.py  pytest_unconfigure.py  test_athena_engine.py  test_base_engine.py  test_catalog_engine.py  test_constants.py  test_data_linter_engine.py  test_database.py  test_pandas_engine.py  test_pipeline.py  test_pipeline_builder.py  test_schema_reader.py  test_transforms.py  test_utils.py
tests/data/configs/: athenadb.yml  missing_db_lint.yml  missing_meta.yml  testdb.yml
tests/data/dummy_data/: dummy_data2.csv  dummy_data3.csv  dummy_data4.csv
tests/data/python_scripts/: testdb.py
tests/test_metadata/: test_metadata_model.py
(+25 files in other folders)
